Add get product list endpoint for customer api
