# openapi/custom-shop-api.yaml
@@ -254,7 +254,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/AdminProductListResponse"
+                $ref: "#/components/schemas/ProductListResponse"
         "400":
           description: Invalid request parameters
           content:
@@ -382,6 +382,47 @@ paths:
                 $ref: "#/components/schemas/ErrorResponse"
         "500":
           description: Internal server error.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+  /v1/products:
+    get:
+      summary: Get paginated list of products
+      description: Retrieves a paginated list of products with essential details.
+      tags:
+        - Product
+      operationId: getProductList
+      parameters:
+        - name: page
+          in: query
+          required: false
+          description: Page number (default is 1)
+          schema:
+            type: integer
+            default: 1
+        - name: size
+          in: query
+          required: false
+          description: Number of items per page (default is 10)
+          schema:
+            type: integer
+            default: 10
+      responses:
+        "200":
+          description: Successfully retrieved product list
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProductListResponse"
+        "400":
+          description: Invalid request parameters
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
+        "500":
+          description: Internal server error
           content:
             application/json:
               schema:
@@ -912,7 +953,7 @@ components:
           type: string
           description: The name of the attribute option.
 
-    AdminProductListResponse:
+    ProductListResponse:
       type: object
       properties:
         products:
@@ -958,7 +999,9 @@ components:
           type: number
           format: float
           description: Product price
-
+        mainPicture:
+          type: string
+          example: "https://yourserver.com/uploads/main_picture_550e8400-e29b-41d4-a716-446655440000.jpg"
 
     ErrorResponse:
       type: object
